# operation-drake

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CURRENT_STATE.md  Dockerfile  Makefile  README.md  ROADMAP.md  TASKS.md  docker-compose.yml  pyproject.toml
.claude/commands/: handoff.md
data/: project_registry.json
docs/: notion-setup.md  vps-deployment.md
docs/decisions/: 0001-initial-architecture.md
docs/planning/: 00-COMMAND-CENTER.md  01-v1.1-close-the-loop.md  02-v1.2-sunday-review.md  03-v2-plan-confirm-execute.md  04-v3-evaluators-study.md  05-v4-external-data.md  06-wellness-agent.md  README.md
health/: .env.example  .gitignore  PROJECT_STATE.md  README.md  auth.py  client.py  config.py  db.py  ingest.py  requirements.txt  schema.sql  verify.py
prompts/: capture.md  meta_noise_filter.md  notion_classifier.md  router.md  synthesis.md
scripts/: archive_stale_checkins.py  backup.sh  deploy.sh  dry_run.py  smoke_test.sh
src/operation_drake/: config.py  main.py
src/personal_agent_os/: config.py  main.py
tests/: conftest.py
tests/integration/: test_cli_pipeline.py  test_orchestration.py
tests/unit/: test_agents.py  test_auth.py  test_check.py  test_classifier.py  test_config.py  test_dedupe_and_meta_noise.py  test_ingestion.py  test_intake_bot_fixes.py  test_meta_noise_agent.py  test_models.py  test_new_repositories.py  test_notion_body.py  test_notion_classifier.py  test_notion_client.py  test_notion_commands.py  test_notion_foundation.py  test_notion_mapper.py  test_notion_orchestration.py  test_notion_sync_service.py  test_providers.py  (+5 more)
(+88 files in other folders)
